# Kensa

./: .eslintrc.cjs  .gitignore  .vscodeignore  CHANGELOG.md  LICENSE  README.md  SECURITY.md  codecov.yml  package-lock.json  package.json  tsconfig.extension.json  tsconfig.json  tsconfig.webview.json
.claude/: settings.local.json
.github/: dependabot.yml
.github/workflows/: build.yml  codeql.yml  coverage.yml  release.yml
crates/kensa-engine/: Cargo.toml  package.json
crates/kensa-engine/src/: column.rs  csv_reader.rs  errors.rs  excel_reader.rs  export.rs  filter.rs  flashfill.rs  frequency.rs  histogram.rs  jsonl_reader.rs  lib.rs  parquet_reader.rs  search.rs  slicer.rs  sort.rs  stats.rs  types.rs
scripts/: build.mjs  make-placeholder-icon.mjs  test.mjs  ts-loader.mjs
src/extension/: codeGenerator.ts  commands.ts  dataRouter.ts  extension.ts  fileHandler.ts  kernelManager.ts  modeManager.ts  notebookArgParser.ts  notebookController.ts  notebookResolver.ts  pythonBackend.ts  rustBridge.ts  webviewProvider.ts
src/python/: kensa_helpers.py  requirements.txt
src/shared/: messages.ts  operations.ts  types.ts
src/webview/: App.tsx  formatters.ts  index.tsx  renderer.ts  vscodeApi.ts
src/webview/components/: CellContextMenu.tsx  CodeEditor.tsx  CodePreview.tsx  ColumnHeader.tsx  ColumnPicker.tsx  DataGrid.tsx  (+9 more)
test/fixtures/: vscode-stub.js
test/integration/: activation.test.ts  engine.test.ts
test/shared/: codeGenerator.test.ts  messages.test.ts  notebookArgParser.test.ts  notebookResolver.test.ts  operations.test.ts
test/webview/: store.test.ts
(+2 files in other folders)
