[package]
name = "kensa-engine"
version = "0.1.11"
edition = "2021"
license = "MIT"
description = "Native data engine for Kensa — columnar CSV/Parquet/Excel reader and statistics kernel."

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
napi = { version = "3", features = ["napi9", "serde-json"] }
napi-derive = "3"
csv = "1.3"
arrow = "58"
parquet = { version = "58", features = ["arrow"] }
calamine = "0.34"
rayon = "1.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
chrono = "0.4"
encoding_rs = "0.8"
encoding_rs_io = "0.1"
thiserror = "2"

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
codegen-units = 1
strip = "symbols"
opt-level = 3
